apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: juan2040751/front_usuarios
          ports:
            - containerPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: juan2040751/autenticacion
          ports:
            - containerPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: juan2040751/usuarios
          ports:
            - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000



---
apiVersion: v1
kind: Service
metadata:
  name: users
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: users
  namespace: default
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: users
  
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  annotations:
        prometheus.io/scrape: 'true'
  labels:
    name: auth
  namespace: default
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    name: auth
---
