deploy-serv.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled

##user service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: juan2040751/usuarios
        ports:
        - containerPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: users
  annotations:
        prometheus.io/scrape: 'true'
  namespace: default
spec:
  selector:
    app: users
  ports:
  - port: 8000
    targetPort: 8000



##auth service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: juan2040751/autenticacion
        ports:
        - containerPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: auth
  annotations:
        prometheus.io/scrape: 'true'
  namespace: default
spec:
  selector:
    app: auth
  ports:
  - port: 8000
    targetPort: 8000


##front service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: juan2040751/front_usuarios
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: front
  annotations:
        prometheus.io/scrape: 'true'
  namespace: default
spec:
  selector:
    app: front
  ports:
  - port: 3000
    targetPort: 3000
