front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: juan2040751/front_usuarios
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: userfrontservice
spec:
  type: ClusterIP
  selector:
    app: userfrontservice
  ports:
  - name: ds3p
    port: 3000
    targetPort: 3000
