gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: prod  
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 3000
      name: http
      protocol: HTTP
    hosts:
    - "*"  

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
  namespace: prod
spec:
  hosts:
  - "*"  
  gateways:
  - frontend-gateway  
  http:
  - route:
    - destination:
        host: front
        port:
          number: 3000
