qa-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: qa
spec:
  hosts:
  - '*'
  gateways:
  - qa-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: front
        port:
          number: 3000
